@@ -69,5 +69,7 @@ struct cell *s_cond;
 struct cell *s_begin;
 struct cell *s_let;
 struct cell *s_while;
+struct cell *current;
 FILE* output;
 bool echo;
+int64_t left_to_take;
